--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsc --watch"
   },
   "repository": {
     "type": "git",
@@ -18,5 +23,8 @@
   "homepage": "https://github.com/nerdbord/hatch-the-egg#readme",
   "dependencies": {
     "prettier": "^3.0.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.1.6"
   }
 }
